--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "koa-body": "^6.0.1",
     "koa-bodyparser": "^4.3.0",
     "koa-router": "^12.0.0",
+    "koa-static": "^5.0.0",
     "mongoose": "^6.9.2"
   },
   "devDependencies": {
