--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "koa-bodyparser": "^4.3.0",
     "koa-router": "^12.0.0",
     "koa-static": "^5.0.0",
-    "mongoose": "^6.9.2"
+    "mongoose": "^6.9.2",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
